WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291959
AX: WebKit doesn't return valid bounding boxes for elements affected by clip-path, causing various issues with ATs
https://bugs.webkit.org/show_bug.cgi?id=291959
Summary
AX: WebKit doesn't return valid bounding boxes for elements affected by clip-...
Tyler Wilcock
Reported
2025-04-23 07:55:29 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-23 07:55:36 PDT
<
rdar://problem/149858058
>
Tyler Wilcock
Comment 2
2025-04-23 08:18:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44420
EWS
Comment 3
2025-04-23 12:57:49 PDT
Committed
294020@main
(886a5ee88e78): <
https://commits.webkit.org/294020@main
> Reviewed commits have been landed. Closing PR #44420 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug