AX: WebKit doesn't return valid bounding boxes for elements affected by clip-path, causing various issues with ATs https://bugs.webkit.org/show_bug.cgi?id=291959 rdar://149858058

Reviewed by Joshua Hoffman.

It's common for web developers to create a "screenreader-only" CSS class that uses clip-path to prevent visual rendering,
but with the expectation that these elements still show up in the accessibility tree. Because this type of clipping prevents
these elements from being painted, which we rely on for accessibility geometry, we produce invalid bounding boxes for these
elements (zero width and height, very wrong x and y). This can cause various issues with ATs like VoiceOver, which may
ignore zero-sized elements, won't draw a cursor for them, etc.

Fix this by not applying clip-path for accessibility paints.

These ".screenreader-only" CSS classes also commonly set a 1px height and width. While this is valid, macOS VoiceOver
will not draw a cursor for anything smaller than 2x2px. With this commit, we detect this scenario for controls, and
bump the width and height up 1px, ensuring a cursor is drawn for these critical UI components.

* LayoutTests/accessibility/clip-path-bounding-box-expected.txt: Added.
* LayoutTests/accessibility/clip-path-bounding-box.html:
* LayoutTests/accessibility/opacity-0-bounding-box.html: Fix a few small issues.
* LayoutTests/platform/glib/TestExpectations: Disable new test.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/ios/accessibility/clip-path-bounding-box-expected.txt: Added.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::relativeFrame const):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupClipPath):

Canonical link: https://commits.webkit.org/294020@main